# the-word

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  song_hash.proof  tsconfig.json
circuits/: Nargo.toml  package.json  the_word.circom
circuits/artifacts/: pot10_final.ptau  the_word.zkey  verifier.json
circuits/scripts/: compile-circuit.sh  crs.sh
circuits/src/: main.nr
cli/: .example.env  README.md  package.json  tsconfig.json  verifier.json
cli/scripts/: compile-circuit.sh
cli/src/: cli.ts  index.ts  main.ts
cli/src/artifacts/: Verifier.sol  pot10_final.ptau  the_word.zkey  verifier.json
cli/src/utils/: artifacts.ts  circom.ts  poseidonContract.ts  words.ts
contracts/: .example.env  hardhat.config.ts  package.json  tsconfig.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: TheWord.sol  Verifier.sol
contracts/scripts/: deploy.ts
contracts/src/: IVerifier.sol  TheWord.sol  plonk_vk.sol
contracts/test/: test.ts
crates/circuit/: Cargo.toml
crates/circuit/src/: circuit.rs  kzg_bn254_7.srs  lib.rs  utils.rs
crates/cli/: Cargo.toml
scripts/: compile-circuit.sh  crs.sh  install-noir.sh  the-word.sh  verifier-contract.sh
server/: .example.env  docker-compose.yml  package.json  tsconfig.json
server/scripts/: createRound.ts
server/src/: auth.ts  controller.ts  index.ts  router.ts  schema.ts  utils.ts
src/: circuit.json  cli.ts  index.ts  main.ts  test.ts
src/artifacts/: pot10_final.ptau  the_word.r1cs  the_word.zkey
src/utils/: circom.ts  fs.ts  noir.ts  poseidonContract.ts  words.ts
(+14 files in other folders)
